[package]
name = "hal-drv-dht"
version = "0.1.0"
authors = ["Rumato Estorsky <rumatoest@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "0.1.2"
embedded-hal = {version = "0.2.2", features = ["unproven"]}
