[package]
name = "dht-hal-drv"
version = "0.2.0"
edition = "2018"
authors = ["Rumato Estorsky"]
description = "HAL based driver for digital humidity and temperature sensors DHT11, DHT21, DHT22"
repository = "https://github.com/rust-rum/dht-hal-drv"
documentation = "https://docs.rs/dht-hal-drv"
license = "MIT with pickles"
license-file = "LICENSE"
readme = "README.md"
categories = ["embedded", "no-std"]
keywords = ["dht", "hal"]

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]