[package]
name = "dht-hal-drv"
version = "0.2.2"
edition = "2018"
authors = ["Rumato Estorsky"]
description = "HAL based driver for digital humidity and temperature sensors DHT11, DHT21, DHT22"
repository = "https://github.com/rustrum/dht-hal-drv"
documentation = "https://docs.rs/dht-hal-drv"
license-file = "LICENSE"
readme = "README.md"
categories = ["embedded", "no-std"]
keywords = ["dht", "hal"]

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]